--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Angular 2 QuickStart</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -12,6 +12,8 @@
     <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <!-- Load the Angular router -->
+    <script src="node_modules/angular2/bundles/router.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
     <script>
@@ -26,12 +28,13 @@
       System.import('app/main')
             .then(null, console.error.bind(console));
     </script>
-
   </head>
+  <!-- Used by the Angular router ... -->
+  <base href="/">
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <main-frame>Loading...</main-frame>
   </body>
 
 </html>
