Disable scrolling in main-frame

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <base href="/">
 
   <!-- 3. Display the application -->
-  <body>
+  <body scroll="no" style="overflow: hidden">
     <main-frame>Loading...</main-frame>
   </body>
 
