--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Load the Angular router -->
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
 
+    <!-- Normalize.css -->
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css"/>
+
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
