--- a/app/contact/partial_contact.html
+++ b/app/contact/partial_contact.html
@@ -2,7 +2,7 @@
 
 
 	<title>Contact KTH</title>
-	 <link rel="stylesheet" type="text/css" href="partial_contact.css">
+	 <link rel="stylesheet" type="text/css" href="partial_contact.min.css">
 
 
 
