Added a service that feteches calender event from csc's calender

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <!-- Normalize.css -->
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css"/>
 
+     <!-- RxJs -->
+    <script src="node_modules/rxjs/bundles/Rx.js"></script> 
+
+    <!-- HTTP -->
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
