--- a/app/contact/partial_contact.html
+++ b/app/contact/partial_contact.html
@@ -9,24 +9,23 @@
 
 
 <div class="globalwrapper">
-<div class="wrapper">
+
 <div class="buttonHolder">
 	<br>
-  <button class="contact" id="contact" name="contact" type="button">Contact</button>
-  <button class="book_errand" id="book_errand" name="book_errand" type="button">Book Errand</button>
-  <button class="report_error" id="report_error" name="report_error" type="button">Report Error</button>
+  <button class="contact" name="contact" type="button" (click)="changeSubject(0)">Contact</button>
+  <button class="book_errand" name="booking" type="button" (click)="changeSubject(1)">Book Errand</button>
+  <button class="report_error" name="error" type="button" (click)="changeSubject(2)">Report Error</button>
 	<br>
 </div>
-</div>
+
+<form>
+
+<input [(ngModel)]="email.reciever" type="text" class="nameBox" placeholder="Who?"> <br>
+<textarea [(ngModel)]="email.message"	type="text"	class="inputBox" placeholder="Description (Why?)"></textarea> <br>
+
+<button type="submit" value="Submit" (click)="onSubmit(email.reciever, subject, email.message)">Submit</button>
+<button type="reset" value="Reset">Reset</button>
 
 
-	<form [ngFormModel]="emailForm" (submit)="doSend($event)">
-    <input ngControl="name" class="nameBox" type="name" placeholder="Who?"><br>
-    <textarea ngControl="errand" class="inputBox" type="errand" placeholder="Description (Why?)"></textarea>
-		<br>
-  <button type="submit">Send</button>
-	<button type="reset">Reset</button>
 </form>
-
-
 </div>
