--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <!-- Load the Angular router -->
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
-
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
