--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
   </head>
   <!-- Used by the Angular router ... -->
-  <base href="/">
+  <base href="http://project-handbook.github.io/interactive-screens/">
 
   <!-- 3. Display the application -->
   <body scroll="no" style="overflow: hidden">
