--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <!-- Normalize.css -->
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css"/>
 
+   <!-- Angular HTTP -->
+   <script src="node_modules/angular2/bundles/http.dev.js"></script>
+
+   <!-- Angular RXJS -->
+   <script src="node_modules/rxjs/bundles/Rx.js"></script>
+
+
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
@@ -33,7 +40,7 @@
     </script>
   </head>
   <!-- Used by the Angular router ... -->
-  <base href="http://project-handbook.github.io/interactive-screens/">
+  <base href="">
 
   <!-- 3. Display the application -->
   <body scroll="no" style="overflow: hidden">
