--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,4 +1,4 @@
-<h1> FAQ <h1>
+<div class="header1"> FAQ </div>
 
 <link rel="stylesheet" type="text/css" href="contact.min.css">
   <div class="dropDown">
@@ -6,7 +6,11 @@
     <option *ngFor="#value of dropDownValues" [value]="value.id">{{value.name}}</option>
   </select>
 </div>
+<div class="textArea">{{selectedValue.info}}</div>
 
-<h2> Information </h2>
 
-  <div class ="textArea">{{selectedValue.info}}</div>
+<p>If you have something else you need to ask/report, please do so below.</p>
+
+<textarea name="requestHelp" placeholder="What is your problem?"></textarea>
+<br>
+<button type="submit">Send</button>
