fixed minor bug

--- a/index.html
+++ b/index.html
@@ -23,16 +23,12 @@
 
    <!-- Angular RXJS -->
    <script src="node_modules/rxjs/bundles/Rx.js"></script>
-
-    <!-- 2. Configure SystemJS -->
+   <!-- Leaflet -->
     <script src="node_modules/leaflet/dist/leaflet.js"></script>
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css"/>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-<script src="node_modules/ng2-bootstrap/bundles/ng2-bootstrap.min.js"></script>
-<script src="node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 
 
+    <!-- 2. Configure SystemJS -->
     <script>
       System.config({
         packages: {
