--- a/app/map/map.html
+++ b/app/map/map.html
@@ -1,10 +1,18 @@
 
 
-
- <body>
  <div class="wrapper">
+ 	<div class="map-and-search">
 		<auto-complete (newLocation)="addDestinationMarker($event)"></auto-complete>  
 		  <ul><li *ngFor="#res of searchResult" (click)="addDestinationMarker(res)">{{res.roomCode}}</li></ul>	
 		  <div class="maps" id="map"></div>
     </div>
-</body>    
+    <div class="common-places">
+    	<h1>Popular Places</h1>
+    	<ul>
+    		<li> Library </li>
+    		<li> Nymble </li>
+    		<li> KTH Bookstore </li>
+    		<li> KTH Entrance </li>
+    	</ul>
+
+    </div>
