--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,8 +1,8 @@
-<!-- Load our partials' css file -->
-<link rel="stylesheet" href="home.min.css"/>
+<!-- Load our partials' css file <link rel="stylesheet" href="http://www.kth.se/css/v/8.28.4/kth.css"/>-->
 
-<div class="first-news-block" [innerHtml]="news_block">
-</div>
-
-<div class="calendar-block" [innerHtml]="calendar_block">
+<div class="container">
+	<div class="first-news-block" [innerHtml]="news_block">
+	</div>
+	<div class="calendar-block" [innerHtml]="calendar_block">
+	</div>
 </div>
