Added router link to Map from person-profile.

--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -35,7 +35,7 @@
 						<tr>
 							<td class="category">Address</td>
 							<td>{{ person.visiting_address }}</td>
-							<td *ngIf="person.visiting_address"><a href="">View on map</a></td>
+							<td *ngIf="person.visiting_address"><a [routerLink]="['Map', {person: person}]">View on map</a></td>
 						</tr>
 						<tr>
 							<td class="category">KTH profile</td>
