--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -22,7 +22,7 @@
 					<table>
 						<tr>
 							<td class="category">Works at</td>
-							<td>MISSING</td>
+							<td>{{ person.working_place }}</td>
 						</tr>
 						<tr>
 							<td class="category">Email</td>
