--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -1,6 +1,7 @@
 <!-- Load our partials' css file -->
 <link rel="stylesheet" href="main-frame.min.css"/>
 <header class="main_frame_header">
+  <img src="app/main-frame/images/KTH_Logotyp_RGB_2013.jpg" width="120" height="120"/>
   <h1 class="main_header_title">{{ screenInfo.title }}</h1>
 </header>
 
