--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -22,7 +22,7 @@
 					<table>
 						<tr>
 							<td class="category">Works at</td>
-							<td>MISSING</td>
+							<td>{{person.works_for}}</td>
 						</tr>
 						<tr>
 							<td class="category">Email</td>
@@ -39,7 +39,7 @@
 						</tr>
 						<tr>
 							<td class="category">KTH profile</td>
-							<td>MISSING</td>
+							<td><a href="{{person.kth_profile}}">View profile</a></td>
 						</tr>
 					</table>
 					<div class="popup-person-about">
