Removed dropdown menu

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,11 +1,12 @@
 <div class="header1"> FAQ </div>
 
 <link rel="stylesheet" type="text/css" href="contact.min.css">
-  <div class="dropDown">
+  <!-- <div class="dropDown">
   <select (change)="onSelect($event.target.value)">
     <option *ngFor="#value of dropDownValues" [value]="value.id">{{value.name}}</option>
   </select>
 </div>
+-->
 <div class="textArea">{{selectedValue.info}}</div>
 
 
