solved menu bug when navigating from find people to map through popup, solved bug in contact

--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -39,7 +39,7 @@
 						</tr>
 						<tr>
 							<td class="category">KTH profile</td>
-							<td>MISSING</td>
+							<td>{{person.kth_profile}}</td>
 						</tr>
 					</table>
 					<div class="popup-person-about">
