--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,4 +1,4 @@
-<div class="header1"> FAQ </div>
+
 
 <link rel="stylesheet" type="text/css" href="contact.min.css">
   <!-- <div class="dropDown">
@@ -9,11 +9,30 @@
 <div class="textArea">{{selectedValue.info}}</div>
 
 -->
+<h1>Contact CSC in the text field below if you have an errand. Don't forget to supply your email so that they can contact you!</h1>
+<form [ngFormModel]="form">
+  <div class="wrapper1">
+    <label for="msg">Message</label>
+    <br>
+    <textarea type="text" [(ngModel)]="email.message" placeholder="Description"  ngControl="msgCtrl"></textarea>
+    <div *ngIf="msgCtrl.dirty && !msgCtrl.valid">
+      <p *ngIf="msgCtrl.errors.minlength">
+        Your message needs to be longer.
+      </p>
+    </div>
 
+  </div>
 
-<p>If you have something else you need to ask/report, please do so below.</p>
+  <div class="wrapper2">
 
-<textarea [(ngModel)]="email.message"	type="text" name="requestHelp" placeholder="Description"></textarea>
+    <label for="from">Email</label>
+    <br>
+    <input required type="text" [(ngModel)]="email.fromEmail" placeholder="Your mail" ngControl="emailCtrl"/>
+    <div *ngIf="emailCtrl.dirty && !emailCtrl.valid" class="alert alert-danger">
+                            <p *ngIf="emailCtrl.errors.required">Email is required.</p>
+                            <p *ngIf="emailCtrl.errors.isInCorrectEmail">Email format is invalid.</p>
+                        </div>
+  </div>
+    <button type="submit" (click)="onSubmit(email.fromEmail, email.message)">Submit</button>
 
-
-<button type="submit" (click)="onSubmit(email.reciever, email.message)">Submit</button>
+</form>
