--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -14,7 +14,7 @@
     <h2>General Information</h2>
     <div class="">
       <h3>Title of the screen</h3>
-      <input type="text" placeholder="Information Desk" [(ngModel)]="title"/>
+      <input type="text" placeholder="Information Desk" [(ngModel)]="screenInfo.title"/>
     </div>
   </div>
 
@@ -22,16 +22,30 @@
     <h2>Sidebar Information</h2>
     <div class="">
       <h3>Address - shown in the sidebar</h3>
-      <input type="text" placeholder="Avenue Street 123" [(ngModel)]="address"/>
+      <input type="text" placeholder="Avenue Street 123" [(ngModel)]="screenInfo.address"/>
+    </div>
+
+    <div class="">
+      <h3>Postal code - shown in the sidebar</h3>
+      <input type="text" placeholder="12345" [(ngModel)]="screenInfo.postal_code">
+    </div>
+
+    <div class="">
+      <h3>City - shown in the sidebar</h3>
+      <input type="text" placeholder="Stockholm" [(ngModel)]="screenInfo.city">
     </div>
 
     <div class="">
       <h3>Telephone number - shown in the sidebar</h3>
-      <input type="text" placeholder="+46 076 123 123" [(ngModel)]="telephoneNumber">
+      <input type="text" placeholder="+46 076 123 123" [(ngModel)]="screenInfo.telephoneNumber">
     </div>
   </div>
 
   <div class="">
-    <button type="submit" (click)="submitInformation()">Done</button>
+    <button type="submit" (click)="saveInformation()">Save</button>
+  </div>
+
+  <div class="">
+    <button (click)="loadInformation()">Load</button>
   </div>
 </div>
