Added more fields to the setup process

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -9,6 +9,7 @@
   <header>
     Press the the 'Help' button for detailed documentation.
   </header>
+  <button type="button">Help</button>
 
   <div class="">
     <h2>General Information</h2>
@@ -38,6 +39,17 @@
     <div class="">
       <h3>Telephone number - shown in the sidebar</h3>
       <input type="text" placeholder="+46 076 123 123" [(ngModel)]="screenInfo.telephoneNumber">
+    </div>
+
+    <div class="">
+      <h3>Nearby Departments - shown in the sidebar</h3>
+      <h4>Add the nearby departments</h4>
+      <input type="text" placeholder="Service Center" [(ngModel)]="newDepartment">
+      <button (click)="addDepartment()">Add</button>
+      <h4>Select the nearest department</h4>
+      <select [(ngModel)]="screenInfo.nearest_department">
+        <option *ngFor="#department of departments">{{ department }}</option>
+      </select>
     </div>
   </div>
 
