Added jQuery to the project.
At this moment in time we use jQuery to scrape the 'About me' section
from every person's KTH profile page. This is a huge dependency for
just one little feature but as it stands now it does not affect
performance or the complexity and thus making it worth keeping for the
feature's sake.

I am so sorry.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <script src="node_modules/leaflet/dist/leaflet.js"></script>
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css"/>
 
+    <!-- jQuery  -->
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
