Dynamic about me information in person-profile.

--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -39,13 +39,13 @@
 						</tr>
 						<tr>
 							<td class="category">KTH profile</td>
-							<td>{{person.kth_profile}}</td>
+							<td>{{ person.kth_profile }}</td>
 						</tr>
 					</table>
 					<div class="popup-person-about">
 						About me
 						<div class="popup-person-line"></div>
-						<p>Project manager at Centre for Sustainable Communications (SESC).</p>
+						<p>{{ person.about_me }}</p>
 					</div>
 				</div>
 			</div>
