--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,45 +1,35 @@
-
-
 <link rel="stylesheet" type="text/css" href="contact.min.css">
-  <!-- <div class="dropDown">
-  <select (change)="onSelect($event.target.value)">
-    <option *ngFor="#value of dropDownValues" [value]="value.id">{{value.name}}</option>
-  </select>
-</div>
 
+<div>
+  <h1>Contact CSC in the text field below if you have an errand. Don't forget to supply your email so that they can contact you!</h1>
 
-<div class="textArea">{{selectedValue.info}}</div>
--->
-<div class="wrapper1">
-
-<h1>Contact CSC in the text field below if you have an errand. Don't forget to supply your email so that they can contact you!</h1>
-
-<form [ngFormModel]="form">
-    <label for="msg">Message</label>
-    <br />
-    <textarea type="text" [(ngModel)]="email.message" placeholder="Description"  ngControl="msgCtrl"></textarea>
-    <div class="msgError" *ngIf="msgCtrl.dirty && !msgCtrl.valid">
-      <p *ngIf="msgCtrl.errors.minlength">
-        Your message needs to be longer.
-      </p>
+  <form [ngFormModel]="form">
+    <div class="wrapper">
+      <label for="msg">Message</label>
+      <br />
+      <textarea type="text" [(ngModel)]="email.message" placeholder="Description"  ngControl="msgCtrl"></textarea>
+      <div class="msgError" *ngIf="msgCtrl.dirty && !msgCtrl.valid">
+        <p *ngIf="msgCtrl.errors.minlength">
+          Your message needs to be longer.
+        </p>
+      </div>
     </div>
 
+      <div>
+        <label for="from">Email</label>
+        <br/>
+        <input required type="text" [(ngModel)]="email.fromEmail" placeholder="Your mail" ngControl="emailCtrl"/>
+        <div class="emailError" *ngIf="emailCtrl.dirty && !emailCtrl.valid">
+          <p *ngIf="emailCtrl.errors.required">Email is required.</p>
+          <p *ngIf="emailCtrl.errors.isInCorrectEmail">Email format is invalid.</p>
+        </div>
+      </div>
 
-
-    <label for="from">Email</label>
-    <br />
-    <input required type="text" [(ngModel)]="email.fromEmail" placeholder="Your mail" ngControl="emailCtrl"/>
-    <div class="emailError" *ngIf="emailCtrl.dirty && !emailCtrl.valid">
-                            <p *ngIf="emailCtrl.errors.required">Email is required.</p>
-                            <p *ngIf="emailCtrl.errors.isInCorrectEmail">Email format is invalid.</p>
-                        </div>
-
-  <div class="buttonArea">
-    <button type="submit" (click)="onSubmit(email.fromEmail, email.message)">Submit</button>
-    <div class="errorMsg" *ngIf="error === true" class="alert alert-success box-msg" role="alert">
-    <p>Couldn't send!</p>
-  </div>
-</div>
-</form>
-
+    <div class="buttonArea">
+      <button type="submit" (click)="onSubmit(email.fromEmail, email.message)">Submit</button>
+      <div class="errorMsg" *ngIf="error === true" class="alert alert-success box-msg" role="alert">
+      <p>Couldn't send!</p>
+      </div>
+    </div>
+  </form>
 </div>
