--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </script>
   </head>
   <!-- Used by the Angular router ... -->
-  <base href="">
+  <base href="/">
 
   <!-- 3. Display the application -->
   <body scroll="no" style="overflow: hidden">
