--- a/app/find-person/person-profile.html
+++ b/app/find-person/person-profile.html
@@ -35,7 +35,8 @@
 						<tr>
 							<td class="category">Address</td>
 							<td>{{ person.visiting_address }}</td>
-							<td *ngIf="person.visiting_address"><a [routerLink]="['Map', {hej:person.visiting_address}]">View on map</a></td>
+							<td *ngIf="person.visiting_address"><a [routerLink]="['Map', {given_name:person.given_name,
+							family_name:person.family_name,address:person.visiting_address}]">View on map</a></td>
 						</tr>
 						<tr>
 							<td class="category">KTH profile</td>
