Fixed telephone number not loading in setup-process

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -68,7 +68,7 @@
     <tr class="item">
       <td>
         <p>Telephone number</p>
-        <input type="text" placeholder="+46 076 123 123" [(ngModel)]="telephoneNumber" />
+        <input type="text" placeholder="+46 076 123 123" [(ngModel)]="screenInfo.telephoneNumber" />
       </td>
       <td>
         <a href="javascript:void(0)" onclick="document.getElementById('telephoneInfo').style.display= document.getElementById('telephoneInfo').style.display == 'none' ? 'block' : 'none';">
