--- a/app/map/html/search-bar.html
+++ b/app/map/html/search-bar.html
@@ -1,21 +1,21 @@
 	<div class="container" >
         <div>
-            <input class="searchField" placeholder="Search for a location..." autocomplete="off" type="text" [ngFormControl]="term">
+            <input class="searchField" placeholder={{search_bar_placeholder}} autocomplete="off" type="text" [ngFormControl]="term">
             <div class="selectButton" id="button2" (click)="buttonPush(2)" (click)="getSchools()" [ngStyle]="{'background-color': buttons[2]}">
                 <h3>Schools</h3>
-            </div> 
+            </div>
               <div class="selectButton" id="button1" (click)="buttonPush(1)" [ngStyle]="{'background-color': buttons[1]}">
                 <h3>Address</h3>
-            </div> 
+            </div>
               <div class="selectButton" id="button0" (click)="buttonPush(0)"  [ngStyle]="{'background-color': buttons[0]}">
                 <h3>Location</h3>
-            </div>  
+            </div>
         </div>
         <div class="school-wrapper">
             <div class="left-wrapper">
                  <ul class="ul-schools"*ngFor="#school of schools">
                     <li class="li-schools" (click)="getDepartments(school.code)">{{school.school}} </li>
-                </ul> 
+                </ul>
             </div>
             <div class="right-wrapper">
                 <div class="dep-col-1">
@@ -27,9 +27,9 @@
                     <ul  *ngFor="#dep of departmentsCol2">
                         <li (click)="select(dep)">{{dep.name_sv}} </li>
                     </ul>
-                </div>  
+                </div>
             </div>
-        </div>    
+        </div>
             <div class="error" *ngIf="showErrorMessage">
                 <h1>The requested data is not available at the moment, please come again!</h1>
             </div>
