Improved contact design.

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -1,7 +1,8 @@
 <link rel="stylesheet" type="text/css" href="contact.min.css">
 
-<div>
-  <h1>Contact CSC in the text field below if you have an errand. Don't forget to supply your email so that they can contact you!</h1>
+<div class="bigAssWrapper">
+  <h1>Contact CSC in the text field below if you have an errand.</h1>
+  <h2>Don't forget to supply your email so that they can contact you.</h2>
 
   <form [ngFormModel]="form">
     <div class="wrapper">
