Changed font color of buttons and disabled pinch zoom on leaflet map

--- a/app/map/html/map.html
+++ b/app/map/html/map.html
@@ -1,6 +1,6 @@
 
 
- <div class="wrapper">
+ <div class="map_wrapper">
 		<auto-complete (newLocation)="addDestinationMarker($event)"></auto-complete>
 		  <div class="maps" id="map"></div>
 </div>
