--- a/app/map/html/map.html
+++ b/app/map/html/map.html
@@ -1,19 +1,6 @@
 
 
- <div class="wrapper">
-
-    
+ <div class="map_wrapper">
 		<auto-complete (newLocation)="addDestinationMarker($event)"></auto-complete>
 		  <div class="maps" id="map"></div>
 </div>
-   <!-- <div class="common-places">
-    	<h1>Popular Places</h1>
-    	<ul>
-    		<li> Library </li>
-    		<li> Nymble </li>
-    		<li> KTH Bookstore </li>
-    		<li> KTH Entrance </li>
-    	</ul>
-
-    </div>
-    -->
