--- a/app/map/html/search-bar.html
+++ b/app/map/html/search-bar.html
@@ -1,4 +1,4 @@
-	<div class="container" >
+	<div class="search_bar_wrapper" >
         <div>
             <input class="searchField" placeholder={{search_bar_placeholder}} autocomplete="off" type="text" [ngFormControl]="term">
             <div class="selectButton" id="button2" (click)="buttonPush(2)" (click)="getSchools()" [ngStyle]="{'background-color': buttons[2]}">
