Updated popup marker texts with roomtype and floor. Added a center button to the map, solved a graphical error when error message was showing. The search function now displays Nicknames(ex Fantum) and roomcodes for locations that has a nickname. Also included more roomtypes when searching

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -6,7 +6,7 @@
   <h2>Don't forget to supply your email so that they can contact you.</h2>
 
   <form [ngFormModel]="form" (submit)="onSubmit(email.fromEmail, email.message)">
-    <div class="wrapper">
+    <div class="contact_wrapper">
       <label for="msg">Message</label>
       <br/>
       <textarea required type="text" [(ngModel)]="email.message" placeholder="Description"  ngControl="msgCtrl"></textarea>
