Added error messages to the home screen in the case of the http requests fails for any reason

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,8 +1,20 @@
 <!-- Load our partials' css file <link rel="stylesheet" href="http://www.kth.se/css/v/8.28.4/kth.css"/>-->
 
 <div class="home_container">
-	<div class="news_block" [innerHtml]="news_block">
+	<div class="news_block">
+	<div *ngIf="news_block" [innerHtml]="news_block"></div>
+	<div *ngIf="news_feed_error">
+		<center><img src="app/find-person/images/Error-100.png"/></center>
+		<br>
+		<h3>The requested data is not available at the moment, please come again!</h3>
 	</div>
-	<div class="calendar_block" [innerHtml]="calendar_block">
+</div>
+<div class="calendar_block">
+	<div *ngIf="calendar_block"  [innerHtml]="calendar_block"></div>
+	<div *ngIf="calendar_error">
+		<center><img src="app/find-person/images/Error-100.png"/></center>
+		<br>
+		<h3>The requested data is not available at the moment, please come again!</h3>
 	</div>
+</div>
 </div>
