Made setup-process scroll padding to rem instead of px

--- a/app/setup-process/setup-process.html
+++ b/app/setup-process/setup-process.html
@@ -119,6 +119,6 @@
   <button class="button" type="submit" (click)="saveInformation()">Save</button>
 
   <!-- Padding -->
-  <div style="height: 200px"></div>
+  <div style="height: 20rem"></div>
 
 </div>
