--- a/app/main-frame/main-frame.html
+++ b/app/main-frame/main-frame.html
@@ -56,7 +56,7 @@
     </div>
     <div [routerLink] = "['Contact']" class="sidebar-item" [ngStyle]="{'border-right': menuItemsRightBorder[3]}">
       <div class="icon">
-      <li>Assistance</li>
+      <li>Service or advice</li>
       <img src="https://maxcdn.icons8.com/iOS7/PNG/100/Messaging/message-100.png" />
       </div>
     </div>
